cloud-ecosystem/stack.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: A simple CloudFormation template
Parameters:
  VpcCIDR:
    Description: Please enter the IP range (CIDR notation) for this VPC
    Type: String
    Default: 172.34.0.0/16
Mappings: 
  RegionMap: 
    us-east-1: 
      AMI: "ami-04d29b6f966df1537"
    us-west-1: 
      AMI: "ami-08d9a394ac1c2994c"
Resources:
    VPC:
      Type: AWS::EC2::VPC
      Properties:
          CidrBlock: !Ref VpcCIDR
          EnableDnsHostnames: False
          Tags:
            - Key: "Name"
              Value: "Tyler-CF-VPC"
    InternetGateway:
      Type: AWS::EC2::InternetGateway
      Properties:
        Tags:
          - Key: "Name"
            Value: "Tyler-CF-IGW"
      DependsOn: VPC
    AttachGateway:
      Type: AWS::EC2::VPCGatewayAttachment
      Properties:
        VpcId: !Ref VPC
        InternetGatewayId: !Ref InternetGateway
    PrivateSubnet1:
      Type: AWS::EC2::Subnet
      Properties:
        AvailabilityZone: us-west-1a
        CidrBlock: 172.34.0.0/24
        VpcId: 
          Ref: VPC
        MapPublicIpOnLaunch: False
        Tags:
          - Key: "Name"
            Value: "Tyler-CF-PrivateSubnet1"
    PrivateSubnet2:
      Type: AWS::EC2::Subnet
      Properties:
        AvailabilityZone: us-west-1c
        CidrBlock: 172.34.1.0/24
        VpcId: 
          Ref: VPC
        MapPublicIpOnLaunch: False
        Tags:
          - Key: "Name"
            Value: "Tyler-CF-PrivateSubnet2"
    PublicSubnet1:
      Type: AWS::EC2::Subnet
      Properties:
        AvailabilityZone: us-west-1a
        CidrBlock: 172.34.2.0/24
        VpcId: 
          Ref: VPC
        MapPublicIpOnLaunch: False
        Tags:
          - Key: "Name"
            Value: "Tyler-CF-PublicSubnet1"
    PublicSubnet2:
      Type: AWS::EC2::Subnet
      Properties:
        AvailabilityZone: us-west-1c
        CidrBlock: 172.34.3.0/24
        VpcId: 
          Ref: VPC
        MapPublicIpOnLaunch: False
        Tags:
          - Key: "Name"
            Value: "Tyler-CF-PublicSubnet2"
    PublicRouteTable:
      Type: AWS::EC2::RouteTable
      Properties:
        VpcId: !Ref VPC
        Tags:
        - Key: Name
          Value: Public
    PublicRoute1:   # Public route table has direct routing to IGW:
      Type: AWS::EC2::Route
      DependsOn: AttachGateway
      Properties:
        RouteTableId: !Ref PublicRouteTable
        DestinationCidrBlock: 0.0.0.0/0
        GatewayId: !Ref InternetGateway  
    PublicSubnetARouteTableAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
        SubnetId: !Ref PublicSubnet1
        RouteTableId: !Ref PublicRouteTable
    NATGateway:
      Type: AWS::EC2::NatGateway
      Properties:
        AllocationId: !GetAtt ElasticIPAddress.AllocationId
        SubnetId: !Ref PublicSubnet1
    ElasticIPAddress:
      Type: AWS::EC2::EIP
      Properties:
        Domain: VPC
    Bucket:
      Type: AWS::S3::Bucket
      Properties:
        BucketName: tyler-cf-bucket 
        AccessControl: PublicRead
    WebServer1:
      Type: AWS::EC2::Instance
      Properties:
        ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", AMI]
        InstanceType: t2.micro                                    # Default is m1.small
        SubnetId:
          Ref: PrivateSubnet1
        SecurityGroupIds: 
          - !GetAtt ServerSecurityGroup.GroupId
        Tags:
          - Key: "Name"
            Value: "Tyler-CF-WebServer1"
    WebServer2:
      Type: AWS::EC2::Instance
      Properties:
        ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", AMI]
        InstanceType: t2.micro                                    # Default is m1.small
        SubnetId:
          Ref: PrivateSubnet2
        SecurityGroupIds: 
          - !GetAtt ServerSecurityGroup.GroupId
        Tags:
          - Key: "Name"
            Value: "Tyler-CF-WebServer2"
    ServerSecurityGroup:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupDescription: Example server SG using CloudFormation.
        VpcId: !Ref VPC
        SecurityGroupIngress:
          - CidrIp: 104.153.231.113/32
            FromPort: '80'
            IpProtocol: tcp
            ToPort: '80' 
        Tags:
          - Key: "Name"
            Value: "Tyler-CF-SG"
    WebServerLoadBalancer:
      Properties:
        CrossZone: true
        Listeners:
        - InstancePort: '80'
          InstanceProtocol: HTTP
          LoadBalancerPort: '80'
          Protocol: HTTP
        HealthCheck:
          Target: HTTP:80/
          HealthyThreshold: '2'
          UnhealthyThreshold: '3'
          Interval: '10'
          Timeout: '5'


    # WebServerAutoScalingGroup:
    #   Type: AWS::AutoScaling::AutoScalingGroup
    #   Properties:
    #     Name: Tyler-CF-AS-Group
    #     MaxSize: 3
    #     MinSize: 1

Outputs:
    VPC: 
      Description: VPC created from this CF stack.
      Value: !Ref VPC
    PublicSubnets:
      Description: A list of the public subnets from this CF stack.
      Value: !Join [ ", ", [ !Ref PublicSubnet1, !Ref PublicSubnet2 ]]
    PrivateSubnets:
      Description: A list of the private subnets from this CF stack.
      Value: !Join [ ", ", [ !Ref PrivateSubnet1, !Ref PrivateSubnet2 ]]
    SecurityGroupId:
      Value: !GetAtt [ServerSecurityGroup, GroupId]
      Description: Security Group Id
